# Compilers

./: .gitignore
Final-Project/: Compilers.eap  Parser.hpp  srtable.xlsx
Final-Project/Source/: SleeperTest.txt  Source.sln  test1.txt  test2.txt  test3.txt
Final-Project/Source/Final_Test_Dir/: Final1.txt  Final2.txt  Final3.txt  Final4.txt  Final5.txt  Final6.txt
Final-Project/Source/Source/: AssignNode.cs  AstNode.cs  CodeGenerator.cs  GotoNode.cs  IAstNode.cs  IfNode.cs  LabelNode.cs  LoadNode.cs  OpNode.cs  SlrParser.cs  Source.csproj  SrParser.cs  StateSymbol.cs  StlNode.cs  Tokenizer.cs
Final-Project/Source/Source/Properties/: AssemblyInfo.cs
Lab 1 - Equation Parser/: AstNodes.cpp  AstNodes.hpp  CMakeLists.txt  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  main.cpp
